# python-library-template

./: .pylintrc  CONTRIBUTING.md  README.md  initial.sh  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: conf.py  index.rst
