[bumpversion]
current_version = 0.0.0
commit = True
commit_args = --no-verify
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.cfg]

[bumpversion:file:setup.py]
[bumpversion:file:docs/source/conf.py]

[bumpversion:file:{example_library}/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
	.git/,
	.tox/,
	docs/,
	build/,
	dist/
max-line-length = 99


# Global options:

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True

[mypy-{example_library}.*]
disallow_untyped_defs = True
